<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">wardrive</string>
    <string name="GPS_LABEL_ME">ME</string>
    <string name="MENU_LIST_LABEL">List current WiFis</string>
    <string name="MENU_QUIT_LABEL">Quit</string>
    <string name="MENU_STATS_LABEL">Statistics</string>
    <string name="MENU_MAX_WIFI_VISIBLE_LABEL">WiFis</string>
    <string name="MENU_ABOUT_LABEL">About</string>
    <string name="MENU_OPTIONS_LABEL">Options</string>
    <string name="MENU_DELETE_LABEL">Delete ALL</string>
    <string name="MENU_DELETE_WARNING_LABEL">This will delete ALL data collected, continue?</string>
    <string name="MENU_SERVICE_LABEL">Service ON/OFF</string>
    <string name="MENU_KML_EXPORT_LABEL">Export to KML</string>
    <string name="MENU_SYNC_ONLINE_DB">Send to online DB</string>
    <string name="MENU_SYNC_ONLINE_DB_SEND_ALL_QUESTION">Send all WiFis? (No will send only new ones)</string>
    <string name="MESSAGE_STARTING_KML_EXPORT">Starting KML export...</string>
    <string name="MESSAGE_STARTING_SYNC_ONLINE">Sending to online database...</string>
    <string name="MESSAGE_SUCCESFULLY_EXPORTED_KML">KML file exported</string>
    <string name="MESSAGE_SUCCESFULLY_SYNC_ONLINE">Sending to database complete, updated items: </string>
    <string name="MESSAGE_STATISTICS">Statistics:</string>
    <string name="MESSAGE_STATISTICS_COUNT">\nTotal WiFis in DB: </string>
    <string name="MESSAGE_STATISTICS_OPEN">\nOf which open: </string>
    <string name="MESSAGE_STATISTICS_CLOSED">\nOf which closed: </string>
    <string name="MESSAGE_STATISTICS_LASTAPP_TSTAMP">\nLast application run:</string>
    <string name="MESSAGE_STATISTICS_LASTSERVICE_TSTAMP">\nLast service run:</string>
    <string name="MESSAGE_STATISTICS_NEW_WIFIS">\nNew WiFi since last run:</string>
    <string name="SERVICE_STARTED">wardrive Service started</string>
    <string name="SERVICE_STOPPED">wardrive Service stopped</string>
    <string name="GPS_ENABLED">GPS enabled</string>
    <string name="GPS_DISABLED">GPS disabled</string>
    <string name="GPS_STATUS">GPS status:</string>
    <string name="ABOUT_BOX"><![CDATA[
wardrive v3.12 - android wardriving application\n
Copyright (C) 2009 Raffaele Ragni\n
http://code.google.com/p/wardrive-android/\n
\n
This program is free software: you can redistribute it and/or modify
it under the terms of the GNU General Public License as published by
the Free Software Foundation, either version 3 of the License, or
(at your option) any later version.
\n\n
This program is distributed in the hope that it will be useful,
but WITHOUT ANY WARRANTY; without even the implied warranty of
MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
GNU General Public License for more details.
\n\n
You should have received a copy of the GNU General Public License
along with this program.  If not, see <http://www.gnu.org/licenses/>.
\n\n
Translations by:
\n  Chinese: http://goapk.com
\n  German: Marco Fester alias COOLover
\n  Polish: Tomasz \'Zen\' Napierala
\n  French: Philoyche from http://d-m.be
\n	Russian: dan.samara
\n  Spanish: ZercosZ
\n  Czech: Adam Bogocz
\n\n
Enhancement patches from:\n
  Nick (ncoutsos)
    ]]></string>
    <string name="WIFI_FILTER_DIALOG_TITLE">WiFi Filter</string>
    <string name="WIFI_FILTER_DIALOG_FILTER_ENABLED">Filter Enabled</string>
    <string name="WIFI_FILTER_DIALOG_FILTER_INVERSE">Filter Inverse</string>
    <string name="WIFI_FILTER_DIALOG_FILTER_REGEXP">Filter regexp (java style)</string>
    <string name="OK">Ok</string>
    <string name="THIS_REGEXP_IS_AN_INVALID_ONE">is an invalid regexp</string>
    <string name="MENU_LIST_ITEM_DELETE_LABEL">Delete this item</string>
    <string name="LIST_ITEM_DELETE_CONFIRM">Are you sure to delete this item?</string>
    <string name="YES">Yes</string>
    <string name="NO">No</string>
    <string name="MENU_SEND_TO_WIGLE">Send saved wardrive.kml to wigle</string>
    <string name="WIGLE_ACCOUNT_DIALOG_TITLE">Wigle account</string>
    <string name="WIGLE_ACCOUNT_DIALOG_USERNAME">Username</string>
    <string name="WIGLE_ACCOUNT_DIALOG_PASSWORD">Password</string>
    <string name="MESSAGE_STARTING_SEND_TO_WIGLE">Sending actual wardrive.kml to wigle</string>
	<string name="MESSAGE_SEND_TO_WIGLE_FILE_NOT_FOUND">"wardrive.kml" not found. Export the file before sending.</string>
    <string name="MESSAGE_SEND_TO_WIGLE_ERROR">Error received from server.</string>
    <string name="MESSAGE_SEND_TO_WIGLE_OK">Uploaded correctly to wigle.</string>
	<string name="MENU_KML_EXPORT_PATH">KML Export Path</string>
	<string name="KML_EXPORT_PATH_DIALOG_ERROR">Invalid path specified.</string>
	<string name="OVERLAY_SERVICE_ON">Service: ON</string>
	<string name="OVERLAY_SERVICE_OFF">Service: OFF</string>
	<string name="KML_EXPORT_EXPORT_ALL_QUESTION">Export all WiFis?</string>
	
	
	
	<!-- Preferences activity -->
	<string name="layout_preferences_group_scanning">Scanning</string>
	<string name="layout_preferences_gpsScanInterval">GPS Times</string>
	<string name="layout_preferences_gpsScanInterval_detail">How much frequent will be the WiFi scanning</string>
	<string-array name="layout_preferences_gpsScanInterval_labels">
		<item>Short (3s, 3m)</item>
		<item>Medium (10s, 10m)</item>
		<item>Long (30s, 50m)</item>
	</string-array>
	<string-array name="layout_preferences_gpsScanInterval_values">
		<item>0</item>
		<item>1</item>
		<item>2</item>
	</string-array>
	<string name="layout_preferences_group_wigleSettings">WiGLE account settings</string>
	<string name="layout_preferences_wigleUpload_accountDetails_username">Username</string>
	<string name="layout_preferences_wigleUpload_accountDetails_password">Password</string>
	<string name="layout_preferences_group_mapOptions">Map options</string>
	<string name="layout_preferences_wifiFilterEnabled">WiFi Filter Enabled</string>
	<string name="layout_preferences_wifiFilter">WiFi Filter Regexp</string>
	<string name="layout_preferences_wifiFilter_detail">Filter regexp (java style)</string>
	<string name="layout_preferences_wifiFilterInverted">WiFi Filter Inverted</string>
	<string name="layout_preferences_mapScale">Show scale</string>
	<string name="layout_preferences_mapSat">Satellite map</string>
	<string name="layout_preferences_followMe">Follow my position</string>
	<string name="layout_preferences_showAPLabels">Show AP labels</string>
	<string name="layout_preferences_showOpenAPs">Show open</string>
	<string name="layout_preferences_showClosedAPs">Show closed</string>
	<string name="layout_preferences_showWEPAPs">Show WEPs</string>
	<string name="layout_preferences_group_exportingAndOther">Exporting and other</string>
	<string name="layout_preferences_kmlExportPath">KML Export Path</string>
	<string name="layout_preferences_notificationsEnabled">Notifications enabled</string>
	<string name="layout_preferences_gpsValidAccuracy">GPS Accuracy</string>
	<string name="layout_preferences_gpsValidAccuracy_description">When accuracy is not enough precise, WiFis are NOT scanned.</string>
	<string name="layout_preferences_wifiValidStrength">WiFi Strength</string>
	<string name="layout_preferences_wifiValidStrength_description">If wifi strength is lower than specified, WiFis are NOT updated/stored</string>
</resources>
