<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
	<PreferenceCategory android:title="@string/layout_preferences_group_scanning">
		<ListPreference
			android:title="@string/layout_preferences_gpsScanInterval"
			android:entries="@array/layout_preferences_gpsScanInterval_labels"
        	android:entryValues="@array/layout_preferences_gpsScanInterval_values"
        	android:summary="@string/layout_preferences_gpsScanInterval_detail"
        	android:defaultValue="0"
        	android:key="gpsTimes"
		/>
	</PreferenceCategory>
	<PreferenceCategory android:title="@string/layout_preferences_group_wigleSettings">
		<EditTextPreference
			android:title="@string/layout_preferences_wigleUpload_accountDetails_username"
        	android:key="wigleUsername"
		/>
		<EditTextPreference
			android:title="@string/layout_preferences_wigleUpload_accountDetails_password"
        	android:key="wiglePassword"
		 	android:password="true" 
		/>
	</PreferenceCategory>
	<PreferenceCategory android:title="@string/layout_preferences_group_mapOptions">
		<CheckBoxPreference
			android:title="@string/layout_preferences_wifiFilterEnabled"
        	android:key="wifiFilterEnabled"
		/>
		<EditTextPreference
			android:title="@string/layout_preferences_wifiFilter"
			android:summary="@string/layout_preferences_wifiFilter_detail"
        	android:key="wifiFilter"
		/>
		<CheckBoxPreference
			android:title="@string/layout_preferences_wifiFilterInverted"
        	android:key="wifiFilterInverted"
		/>
		<CheckBoxPreference
			android:title="@string/layout_preferences_mapScale"
        	android:key="mapScale"
		/>
		<CheckBoxPreference
			android:title="@string/layout_preferences_mapSat"
        	android:key="mapSat"
		/>
		<CheckBoxPreference
			android:title="@string/layout_preferences_followMe"
        	android:key="followMe"
        	android:defaultValue="true"
		/>
		<CheckBoxPreference
			android:title="@string/layout_preferences_showAPLabels"
        	android:key="showAPLabels"
        	android:defaultValue="true"
		/>
		<CheckBoxPreference
			android:title="@string/layout_preferences_showOpenAPs"
        	android:key="showOpenAPs"
        	android:defaultValue="true"
		/>
		<CheckBoxPreference
			android:title="@string/layout_preferences_showClosedAPs"
        	android:key="showClosedAPs"
		/>
		<CheckBoxPreference
			android:title="@string/layout_preferences_showWEPAPs"
        	android:key="showWEPAPs"
		/>
	</PreferenceCategory>
	<PreferenceCategory android:title="@string/layout_preferences_group_exportingAndOther">
		<EditTextPreference
			android:title="@string/layout_preferences_kmlExportPath"
        	android:key="kmlExportPath"
		/>
		<CheckBoxPreference
			android:title="@string/layout_preferences_notificationsEnabled"
        	android:key="notificationsEnabled"
		/>
	</PreferenceCategory>
</PreferenceScreen>