<menu xmlns:android="http://schemas.android.com/apk/res/android">
	<item android:id="@+menu_id/SERVICE" android:title="@string/MENU_SERVICE_LABEL"
		android:icon="@drawable/ic_menu_manage" />
	<item android:id="@+menu_id/LIST" android:title="@string/MENU_LIST_LABEL"
		android:icon="@drawable/ic_menu_mylocation" />
	<item android:id="@+menu_id/STATS" android:title="@string/MENU_STATS_LABEL"
		android:icon="@drawable/ic_menu_view" />
	<item android:id="@+menu_id/PREFERENCES" android:title="@string/MENU_OPTIONS_LABEL"
		android:icon="@drawable/ic_menu_preferences" />
	<item android:id="@+menu_id/QUIT" android:title="@string/MENU_QUIT_LABEL"
		android:icon="@drawable/ic_menu_close_clear_cancel" />
	<item android:id="@+menu_id/KML_EXPORT" android:title="@string/MENU_KML_EXPORT_LABEL"
		android:icon="@drawable/ic_menu_save"></item>
	<item android:id="@+menu_id/SEND_TO_WIGLE" android:title="@string/MENU_SEND_TO_WIGLE"/>
	<item android:id="@+menu_id/ABOUT" android:title="@string/MENU_ABOUT_LABEL"/>
	<item android:id="@+menu_id/DELETE" android:title="@string/MENU_DELETE_LABEL" />
</menu>